<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menuFragment"
        android:title="@string/menu"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24" />
    <item
        android:id="@+id/payFragment"
        android:title="@string/pay"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_payment_24" />
    <item
        android:id="@+id/historyFragment"
        android:title="@string/history"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_history_24" />
    <item
        android:id="@+id/optionFragment"
        android:title="@string/option"
        android:enabled="true"
        android:icon="@drawable/ic_gear_option_svgrepo_com" />
</menu>