<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/hello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/hi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/hello"
            android:layout_alignStart="@+id/hello"
            android:text="@string/name_user"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/hello"
            app:layout_constraintTop_toBottomOf="@+id/hello" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="145dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_engineer_people_svgrepo_com" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_user">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient_color">

                <TextView
                    android:id="@+id/name_balans"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/name_balans"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/name_check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name_balans"
                    android:layout_alignStart="@+id/name_balans"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:text="@string/name_check" />

                <TextView
                    android:id="@+id/name_id_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/name_id_card"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/term_card"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/name_term"
                    android:textColor="@color/white" />
            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name_popular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/name_popular"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card" />

        <TextView
            android:id="@+id/all_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/all_services"
            android:textColor="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="@+id/name_popular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/card" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_popular"
            tools:listitem="@layout/list_services" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_name"
            android:textColor="@color/black"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recycler_services" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rate">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/silver">

                <TextView
                    android:id="@+id/header_sale_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sale_name_kurs"
                    app:layout_constraintBottom_toTopOf="@+id/sale_curs_name_rub"
                    app:layout_constraintStart_toStartOf="@+id/sale_curs_name_rub"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/header_buy_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_name_kurs"
                    app:layout_constraintBottom_toTopOf="@+id/buy_curs_name_rub"
                    app:layout_constraintStart_toStartOf="@+id/buy_curs_name_rub"
                    app:layout_constraintTop_toTopOf="parent" />
                <ImageView
                    android:id="@+id/rub"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rub"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/header_sale_name"
                    />

                <TextView
                    android:id="@+id/rub_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/rub_name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/rub"
                    app:layout_constraintStart_toEndOf="@+id/rub"
                    app:layout_constraintTop_toTopOf="@+id/rub" />

                <TextView
                    android:id="@+id/sale_curs_name_rub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"

                    android:text="@string/example"
                    app:layout_constraintBottom_toBottomOf="@+id/rub_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/rub_name"
                    tools:text="12.0000" />

                <TextView
                    android:id="@+id/buy_curs_name_rub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/example"
                    app:layout_constraintBottom_toBottomOf="@+id/sale_curs_name_rub"
                    app:layout_constraintEnd_toStartOf="@+id/sale_curs_name_rub"
                    app:layout_constraintTop_toTopOf="@+id/sale_curs_name_rub"
                    tools:text="12.0000" />

                <ImageView
                    android:id="@+id/usd"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/usa"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rub" />

                <TextView
                    android:id="@+id/usd_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/dollar_name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/usd"
                    app:layout_constraintStart_toEndOf="@+id/usd"
                    app:layout_constraintTop_toTopOf="@+id/usd" />

                <TextView
                    android:id="@+id/sale_curs_name_usd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/example"
                    app:layout_constraintBottom_toBottomOf="@+id/usd_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/usd_name"
                    tools:text="12.0000" />

                <TextView
                    android:id="@+id/buy_curs_name_usd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/example"
                    app:layout_constraintBottom_toBottomOf="@+id/sale_curs_name_usd"
                    app:layout_constraintEnd_toStartOf="@+id/sale_curs_name_usd"
                    app:layout_constraintTop_toTopOf="@+id/sale_curs_name_usd"
                    tools:text="12.0000" />

                <ImageView
                    android:id="@+id/eur"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_margin="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/euro"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/usd" />

                <TextView
                    android:id="@+id/eur_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/euro_name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="@+id/eur"
                    app:layout_constraintStart_toEndOf="@+id/eur"
                    app:layout_constraintTop_toTopOf="@+id/eur" />

                <TextView
                    android:id="@+id/sale_curs_name_eur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/example"
                    app:layout_constraintBottom_toBottomOf="@+id/eur_name"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/eur_name"
                    tools:text="12.0000" />

                <TextView
                    android:id="@+id/buy_curs_name_eur"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:text="@string/example"
                    app:layout_constraintBottom_toBottomOf="@+id/sale_curs_name_eur"
                    app:layout_constraintEnd_toStartOf="@+id/sale_curs_name_eur"
                    app:layout_constraintTop_toTopOf="@+id/sale_curs_name_eur"
                    tools:text="12.0000" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/cashback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cashback"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/all_cashback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/all_cashback"
            android:textColor="@color/teal_200"
            app:layout_constraintBottom_toBottomOf="@+id/cashback"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_cashback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@+id/all_cashback"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:listitem="@layout/list_cashback"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>