<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/name_header"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        tools:text="@string/example_name_company" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/transaction">

        <ImageView
            android:id="@+id/image_transaction"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:scaleType="centerCrop"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_engineer_people_svgrepo_com" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/example_name_company"
        app:layout_constraintStart_toStartOf="@+id/face_check"
        app:layout_constraintTop_toBottomOf="@+id/transaction" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/face_check"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_header"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/name_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name_amount"
        app:layout_constraintStart_toStartOf="@+id/amount"
        app:layout_constraintTop_toBottomOf="@+id/face_check" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_amount"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_count"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="number"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/send_cash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/list_service"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/amount" />

</androidx.constraintlayout.widget.ConstraintLayout>